[gd_scene load_steps=22 format=3 uid="uid://7dg6curwqk7s"]

[ext_resource type="Texture2D" uid="uid://brtqek05ix5nt" path="res://assets/horror_character1.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://sgdq8xjsh1dv" path="res://scripts/player.gd" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://dqo0840f7a5y8" path="res://assets/inventory/inv_ui.tscn" id="4_dqkch"]
[ext_resource type="PackedScene" uid="uid://bqfjlqauen2p6" path="res://scenes/pause.tscn" id="5_qlg0r"]
[ext_resource type="AudioStream" uid="uid://clihsj628fqql" path="res://assets/Sounds/heartbeat-02-225103.mp3" id="6_tuyoq"]
[ext_resource type="PackedScene" uid="uid://by18mfqdpf4xu" path="res://scenes/narration_box.tscn" id="7_fjrip"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qlg0r"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1ej7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}],
"loop": false,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"hurt",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 6.65
height = 19.8

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("2_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_qlg0r")
position = Vector2(0, -16)
scale = Vector2(1.34375, 1.34375)
sprite_frames = SubResource("SpriteFrames_f1ej7")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.65, -9.9)
shape = SubResource("CapsuleShape2D_g2els")

[node name="Inv_UI" parent="." instance=ExtResource("4_dqkch")]
visible = false
offset_left = -60.0
offset_top = -54.0
offset_right = 112.0
offset_bottom = 66.0
scale = Vector2(0.7, 0.7)

[node name="Pause" parent="." instance=ExtResource("5_qlg0r")]
visible = false
anchors_preset = 9
anchor_right = 0.0
offset_left = -115.0
offset_top = -66.0
offset_right = 115.0
offset_bottom = 66.0
grow_horizontal = 1

[node name="HeartbeatPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tuyoq")
autoplay = true

[node name="NarrationBox" parent="." instance=ExtResource("7_fjrip")]
visible = false
offset = Vector2(0, 50)
scale = Vector2(1, 1)
transform = Transform2D(1, 0, 0, 1, 0, 50)
